rootfs/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_tailscale0 comment=616c6c6f77207472616666696320766961207461696c7363616c6520696e74657266616365
-A ufw-user-input -i tailscale0 -j ACCEPT

### tuple ### allow udp 41641 0.0.0.0/0 any 0.0.0.0/0 in comment=616c6c6f77207461696c7363616c652075647020686f6c652070756e6368696e67
-A ufw-user-input -p udp --dport 41641 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_virbr0 comment=616c6c6f77207472616666696320766961207669727475616c20627269646765
-A ufw-user-input -i virbr0 -j ACCEPT

### tuple ### allow tcp 7891 0.0.0.0/0 any 192.168.31.20 in comment=7065726d6974207373682066726f6d206d6f62696c65207465726d7578
-A ufw-user-input -p tcp --dport 7891 -s 192.168.31.20 -j ACCEPT

### tuple ### allow tcp 25565 0.0.0.0/0 any 192.168.31.20 in comment=7065726d6974206d696e6563726166742066726f6d206d6f62696c65
-A ufw-user-input -p tcp --dport 25565 -s 192.168.31.20 -j ACCEPT

### tuple ### allow tcp 8080 0.0.0.0/0 any 192.168.31.20 in comment=7065726d6974206f70656e77656275692066726f6d206d6f62696c65206c616e
-A ufw-user-input -p tcp --dport 8080 -s 192.168.31.20 -j ACCEPT

### tuple ### allow tcp 53317 0.0.0.0/0 any 192.168.31.20 in comment=7065726d6974206c6f63616c73656e642066726f6d206d6f62696c6520746370
-A ufw-user-input -p tcp --dport 53317 -s 192.168.31.20 -j ACCEPT

### tuple ### allow udp 53317 0.0.0.0/0 any 192.168.31.20 in comment=7065726d6974206c6f63616c73656e642066726f6d206d6f62696c6520756470
-A ufw-user-input -p udp --dport 53317 -s 192.168.31.20 -j ACCEPT

### tuple ### allow tcp 8080 0.0.0.0/0 any 0.0.0.0/0 in_tailscale0 comment=7065726d6974206f70656e776562756920766961207461696c7363616c65
-A ufw-user-input -i tailscale0 -p tcp --dport 8080 -j ACCEPT

### tuple ### allow tcp 11434 0.0.0.0/0 any 0.0.0.0/0 in_tailscale0 comment=7065726d6974206f6c6c616d612061706920766961207461696c7363616c65
-A ufw-user-input -i tailscale0 -p tcp --dport 11434 -j ACCEPT

### END RULES ###

### LOGGING ###
-I ufw-user-logging-input -j RETURN
-I ufw-user-logging-output -j RETURN
-I ufw-user-logging-forward -j RETURN
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
